--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,96 @@
-body {
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #fffff0;
 }
+
+.header{
+  padding: 30px 20px;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(to right, white, yellow, white);
+}
+
+.header .logo{
+  width: 100px;
+}
+
+.header .logo img{
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+}
+
+.header .logo img:hover{
+  width: 85px;
+  height: 85px;
+  transition: 0.5s;
+}
+
+.header h1{
+  height: 100%;
+  font-size: 90px;
+}
+
+.header .login{
+  width: 100px;
+}
+
+.header .login img{
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.header .login img:hover{
+  width: 85px;
+  height: 85px;
+  transition: 0.5s;
+}
+
+.crud{
+  width: 100%;
+  height: 400px;
+  border: 1px solid red;
+}
+
+.quotes{
+  width: 100%;
+  border: 1px solid blue;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.quote{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 10px;
+}
+
+.toDoWrapper{
+  width: 100%;
+  display: flex;
+}
+
+.toDoColor{
+  width: 100px;
+  border: 1px red solid;
+  height: 100px;
+}
+
