--- a/src/index.css
+++ b/src/index.css
@@ -9,16 +9,17 @@ body {
   padding: 0;
   width: 100%;
   height: 100vh;
-  background-color: #fffff0;
+  background-color: #fffff0df;
 }
 
 .header{
-  padding: 30px 20px;
+  padding: 10px 20px;
+  height: 85px;
   display: flex;
   text-align: center;
   justify-content: space-between;
-  align-items: center;
-  background: linear-gradient(to right, white, yellow, white);
+  align-items: center; 
+  border-bottom: 2px solid black;
 }
 
 .header .logo{
@@ -32,14 +33,14 @@ body {
 }
 
 .header .logo img:hover{
-  width: 85px;
-  height: 85px;
-  transition: 0.5s;
+  width: 75px;
+  height: 75px;
+  transition: 0.7s;
 }
 
 .header h1{
   height: 100%;
-  font-size: 90px;
+  font-size: 80px;
 }
 
 .header .login{
@@ -54,21 +55,72 @@ body {
 }
 
 .header .login img:hover{
-  width: 85px;
-  height: 85px;
+  width: 75px;
+  height: 75px;
   transition: 0.5s;
 }
 
 .crud{
   width: 100%;
-  height: 400px;
-  border: 1px solid red;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 10px;
+}
+
+.crud input[type="text"]{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 2px solid black;
+    width: 800px;
+    background-color: transparent;
+    color: black;
+    outline: none;
+    height: 50px;
+    font-size: 25px;
+}
+
+.crud select{
+  border: 1px black solid;
+  outline: none;
+  background-color: transparent;
+  font-size: 25px;
+  height: 50px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.crud button{
+  border: 1px black solid;
+  outline: none;
+  background-color: transparent;
+  font-size: 20px;
+  height: 50px;
+  width: 150px;
+  border-radius: 5px;
+  font-weight: 400;
+  background-color: lightgreen;
+}
+
+.crud button:hover{
+  height: 60px;
+  font-size: 25px;
+  transition: 0.5s;
+  cursor: pointer;
+  font-weight: 490;
+}
+
+input::placeholder{
+  color: black;
+  font-size: 25px;
 }
 
 .quotes{
   width: 100%;
-  border: 1px solid blue;
-  min-height: 100px;
+  min-height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -83,14 +135,64 @@ body {
   gap: 10px;
 }
 
+.quote h1{
+  font-size: 30px;
+}
+
+.quote h2{
+  font-weight: 400;
+}
+
 .toDoWrapper{
-  width: 100%;
+  position: relative;
+  min-height: 500px;
   display: flex;
+  align-items: center;
+  flex-wrap: nowrap; /* Allow items to wrap onto multiple lines */
+  overflow-x: auto; /* Allow horizontal scrolling if the content overflows */
+  gap: 25px;
+  padding: 10px;
 }
 
 .toDoColor{
-  width: 100px;
-  border: 1px red solid;
-  height: 100px;
+  min-width: 350px;
+  height: 450px;
+  border-radius: 30px;
+  display: flex;
+  align-items: top;
+  justify-content: center;
+  text-align: center;
+  font-size: 25px;
+  padding: 20px;
+  font-weight: 600;
+  box-shadow: 10px 8px 10px 5px rgb(198, 198, 198);
 }
 
+.footer{
+  width: 100%;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-top: 2px solid black;
+}
+
+
+.footerWrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  padding: 10px;
+}
+
+.footerWrapper img{
+  width: 95px;
+  height: 95px;
+  cursor: pointer;
+}
+
+.footerWrapper h1{
+  font-size: 25px;
+}
