--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
@@ -12,55 +12,56 @@ body {
   background-color: #fffff0df;
 }
 
-.header{
+.header {
   padding: 10px 20px;
   height: 85px;
   display: flex;
   text-align: center;
   justify-content: space-between;
-  align-items: center; 
-  border-bottom: 2px solid black;
+  align-items: center;
+  border-bottom: 2px solid;
+  background-color: linear-gradient(red, yellow);
 }
 
-.header .logo{
+.header .logo {
   width: 100px;
 }
 
-.header .logo img{
+.header .logo img {
   width: 60px;
   height: 60px;
   cursor: pointer;
 }
 
-.header .logo img:hover{
+.header .logo img:hover {
   width: 75px;
   height: 75px;
   transition: 0.7s;
 }
 
-.header h1{
+.header h1 {
   height: 100%;
   font-size: 80px;
 }
 
-.header .login{
+.header .login {
   width: 100px;
 }
 
-.header .login img{
-    width: 60px;
-    height: 60px;
-    background-color: transparent;
-    cursor: pointer;
+.header .login img {
+  width: 60px;
+  height: 60px;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.header .login img:hover{
+.header .login img:hover {
   width: 75px;
   height: 75px;
   transition: 0.5s;
 }
 
-.crud{
+.crud {
   width: 100%;
   height: 100px;
   display: flex;
@@ -70,20 +71,20 @@ body {
   gap: 10px;
 }
 
-.crud input[type="text"]{
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 2px solid black;
-    width: 800px;
-    background-color: transparent;
-    color: black;
-    outline: none;
-    height: 50px;
-    font-size: 25px;
+.crud input[type="text"] {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid black;
+  width: 800px;
+  background-color: transparent;
+  color: black;
+  outline: none;
+  height: 50px;
+  font-size: 25px;
 }
 
-.crud select{
+.crud select {
   border: 1px black solid;
   outline: none;
   background-color: transparent;
@@ -93,7 +94,7 @@ body {
   cursor: pointer;
 }
 
-.crud button{
+.crud button {
   border: 1px black solid;
   outline: none;
   background-color: transparent;
@@ -105,7 +106,7 @@ body {
   background-color: lightgreen;
 }
 
-.crud button:hover{
+.crud button:hover {
   height: 60px;
   font-size: 25px;
   transition: 0.5s;
@@ -113,12 +114,12 @@ body {
   font-weight: 490;
 }
 
-input::placeholder{
+input::placeholder {
   color: black;
   font-size: 25px;
 }
 
-.quotes{
+.quotes {
   width: 100%;
   min-height: 150px;
   display: flex;
@@ -127,7 +128,7 @@ input::placeholder{
   text-align: center;
 }
 
-.quote{
+.quote {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -135,15 +136,15 @@ input::placeholder{
   gap: 10px;
 }
 
-.quote h1{
+.quote h1 {
   font-size: 30px;
 }
 
-.quote h2{
+.quote h2 {
   font-weight: 400;
 }
 
-.toDoWrapper{
+.toDoWrapper {
   position: relative;
   min-height: 500px;
   display: flex;
@@ -154,21 +155,57 @@ input::placeholder{
   padding: 10px;
 }
 
-.toDoColor{
-  min-width: 350px;
-  height: 450px;
+.toDoColor {
+  width: 300px;
+  height: 400px;
   border-radius: 30px;
   display: flex;
   align-items: top;
   justify-content: center;
   text-align: center;
-  font-size: 25px;
-  padding: 20px;
+  flex-direction: column;
   font-weight: 600;
+  padding: 20px;
   box-shadow: 10px 8px 10px 5px rgb(198, 198, 198);
 }
 
-.footer{
+.toDoColor h1 {
+  width: 300px;
+  height: 300px;
+  padding: 10px 0px;
+}
+
+.toDoColor .toDoBtn {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.toDoColor .toDoText {
+  width: 100%;
+  min-height: 300px;
+}
+
+.toDoColor .toDoBtn button {
+  border: none;
+  outline: none;
+  width: 100px;
+  height: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  z-index: 10000;
+}
+
+.toDoColor .toDoBtn button img {
+  width: 50px;
+  height: 50px;
+}
+
+.footer {
   width: 100%;
   min-height: 100px;
   display: flex;
@@ -178,8 +215,7 @@ input::placeholder{
   border-top: 2px solid black;
 }
 
-
-.footerWrapper{
+.footerWrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -187,12 +223,39 @@ input::placeholder{
   padding: 10px;
 }
 
-.footerWrapper img{
+.footerWrapper img {
   width: 95px;
   height: 95px;
   cursor: pointer;
 }
 
-.footerWrapper h1{
+.footerWrapper h1 {
   font-size: 25px;
+}
+
+.saveToDo {
+  height: 80%;
+}
+
+.saveToDo input {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid black;
+  background-color: transparent;
+  width: 250px;
+  height: 30px;
+  font-size: 30px;
+  outline: none;
+}
+
+.saveToDo button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+
+.saveToDo button img {
+  width: 25px;
+  height: 25px;
 }
