--- a/src/index.css
+++ b/src/index.css
@@ -9,18 +9,17 @@ body {
   padding: 0;
   width: 100%;
   height: 100vh;
-  background-color: #fffff0df;
 }
 
 .header {
   padding: 10px 20px;
-  height: 85px;
+  height: 100px;
   display: flex;
   text-align: center;
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid;
-  background-color: linear-gradient(red, yellow);
+  background-color: #fffff0df;
 }
 
 .header .logo {
@@ -59,6 +58,10 @@ body {
   width: 75px;
   height: 75px;
   transition: 0.5s;
+}
+
+.wrapper {
+  background-color: #fffff0df;
 }
 
 .crud {
@@ -103,7 +106,8 @@ body {
   width: 150px;
   border-radius: 5px;
   font-weight: 400;
-  background-color: lightgreen;
+  background-color: rgb(37, 36, 36);
+  color: #fffff0df;
 }
 
 .crud button:hover {
@@ -126,6 +130,7 @@ input::placeholder {
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: #fffff0df;
 }
 
 .quote {
@@ -207,12 +212,13 @@ input::placeholder {
 
 .footer {
   width: 100%;
-  min-height: 100px;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border-top: 2px solid black;
+  background-color: #fffff0df;
+  border-top: 1px solid black;
 }
 
 .footerWrapper {
@@ -229,13 +235,13 @@ input::placeholder {
   cursor: pointer;
 }
 
-.footerWrapper h1 {
+.footer h1 {
   font-size: 25px;
 }
 
 .saveToDo {
   height: 80%;
-  gap: 15px;
+  gap: 152px;
 }
 
 .saveToDo input {
@@ -259,4 +265,72 @@ input::placeholder {
 .saveToDo button img {
   width: 25px;
   height: 25px;
+}
+
+.sign {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(37, 36, 36);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.sign .formContainer .titleContainer h1 {
+  font-size: 80px;
+}
+
+.sign .formContainer {
+  background-color: #fffff0df;
+  width: 50%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border-radius: 30px;
+  box-shadow: 10px 8px 10px 10px rgb(6, 6, 6);
+}
+
+.sign .formContainer form {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+}
+
+.sign .formContainer form input {
+  background-color: transparent;
+  width: 70%;
+  height: 40px;
+  outline: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid black;
+  font-size: 30px;
+}
+
+.sign form input[type="submit"] {
+  border: 2px solid black;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  border-radius: 5px;
+}
+
+.sign form input[type="submit"]:hover {
+  background-color: rgb(37, 36, 36);
+  color: #fffff0df;
+}
+
+.sign .formContainer a {
+  font-size: 25px;
+  border-bottom: none;
+  outline: none;
 }
