--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100vh;
+  background-color: white;
 }
 
 .header {
@@ -19,7 +20,7 @@ body {
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid;
-  background-color: #fffff0df;
+  background-color: white;
 }
 
 .header .logo {
@@ -61,7 +62,7 @@ body {
 }
 
 .wrapper {
-  background-color: #fffff0df;
+  background-color: white;
 }
 
 .crud {
@@ -107,7 +108,7 @@ body {
   border-radius: 5px;
   font-weight: 400;
   background-color: rgb(37, 36, 36);
-  color: #fffff0df;
+  color: white;
 }
 
 .crud button:hover {
@@ -130,7 +131,7 @@ input::placeholder {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: #fffff0df;
+  background-color: white;
 }
 
 .quote {
@@ -217,7 +218,7 @@ input::placeholder {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #fffff0df;
+  background-color: white;
   border-top: 1px solid black;
 }
 
@@ -270,7 +271,7 @@ input::placeholder {
 .sign {
   width: 100%;
   height: 100vh;
-  background-color: rgb(37, 36, 36);
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -282,7 +283,7 @@ input::placeholder {
 }
 
 .sign .formContainer {
-  background-color: #fffff0df;
+  background-color: white;
   width: 50%;
   height: 90%;
   display: flex;
@@ -291,7 +292,7 @@ input::placeholder {
   text-align: center;
   align-items: center;
   border-radius: 30px;
-  box-shadow: 10px 8px 10px 10px rgb(6, 6, 6);
+  box-shadow: 10px 8px 10px 10px rgb(49, 48, 48);
 }
 
 .sign .formContainer form {
@@ -326,11 +327,19 @@ input::placeholder {
 
 .sign form input[type="submit"]:hover {
   background-color: rgb(37, 36, 36);
-  color: #fffff0df;
+  color: white;
 }
 
-.sign .formContainer a {
-  font-size: 25px;
+.sign .formContainer .links a {
+  font-size: 30px;
   border-bottom: none;
   outline: none;
+}
+
+.sign .links {
+  display: flex;
+  width: 100%;
+  gap: 30px;
+  align-items: top;
+  justify-content: center;
 }
