--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -157,7 +157,6 @@ input::placeholder {
   height: 550px;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-wrap: nowrap; /* Allow items to wrap onto multiple lines */
   overflow-x: auto; /* Allow horizontal scrolling if the content overflows */
   gap: 35px;
@@ -318,8 +317,10 @@ input::placeholder {
   border-left: none;
   border-right: none;
   border-bottom: 2px solid black;
+  display: flex;
+  text-align: center;
   background-color: transparent;
-  width: 150px;
+  width: 200px;
   height: 30px;
   font-size: 30px;
   outline: none;
