--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -176,31 +176,7 @@ input::placeholder {
   font-weight: 600;
   padding: 20px;
   box-shadow: 10px 8px 10px 5px rgb(198, 198, 198);
-}
-
-.toDoColor .toDoBtnEdit {
-  position: relative;
-  width: 100%;
-  height: 55px;
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  padding: 0;
-  margin: 0;
-}
-
-.toDoColor .toDoBtnEdit button {
-  border: none;
-  outline: none;
-  width: 100px;
-  height: 10px;
-  border-radius: 10px;
-  cursor: pointer;
-  background-color: transparent;
-  z-index: 10000;
-  display: flex;
-  align-items: left;
-  justify-content: left;
+  opacity: 0.91;
 }
 
 .toDoColor .toDoBtnEdit button img {
@@ -300,7 +276,9 @@ input::placeholder {
   width: 500px;
   display: flex;
   flex-direction: column;
-  gap: 80px;
+  gap: 60px;
+  padding: 0;
+  padding-top: 70px;
 }
 
 .saveToDoBtns{
@@ -309,7 +287,7 @@ input::placeholder {
 }
 
 .saveToDoBtns button{
-  font-size: 30px;
+  font-size: 40px;
 }
 
 .saveToDo input {
@@ -333,8 +311,8 @@ input::placeholder {
 }
 
 .saveToDo button img {
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
 }
 
 .sign {
