Fixed the Id issue
I was able to fix the id issue that I was having due to the localStorage and useEffect.

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -336,7 +336,7 @@ input::placeholder {
 }
 
 .sign .formContainer {
-  background-color: red;
+  background-color: yellow;
   opacity: 0.91;
   width: 45%;
   height: 96%;
