--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -14,7 +14,7 @@ body {
 
 .header {
   padding: 10px 20px;
-  height: 100px;
+  height: 80px;
   display: flex;
   text-align: center;
   justify-content: space-between;
@@ -108,7 +108,7 @@ body {
 
 .crud {
   width: 100%;
-  height: 100px;
+  height: 90px;;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -184,7 +184,7 @@ input::placeholder {
 }
 
 .quote h1 {
-  font-size: 27px;
+  font-size: 25px;
   font-weight: 400;
 }
 
@@ -195,19 +195,20 @@ input::placeholder {
 
 .toDoWrapper {
   position: relative;
-  height: 550px;
+  height: 500px;
   display: flex;
   align-items: center;
   flex-wrap: nowrap; /* Allow items to wrap onto multiple lines */
   overflow-x: auto; /* Allow horizontal scrolling if the content overflows */
-  gap: 35px;
+  overflow-y: hidden;
+  gap: 38px;
   padding: 10px;
 }
 
 .toDoColor {
   min-width: 300px;
   max-width: 300px;
-  height: 490px;
+  height: 460px;
   border-radius: 30px;
   display: flex;
   align-items: center;
