feat: ajustando CSS da tela de login, analise erro de entrada de caracteres e mudanca de cor.

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -423,8 +423,16 @@ input::placeholder {
 }
 
 .sign .formContainer .links a p {
-  font-size: 27px;
+  font-size: 30px;
   color: black;
+  border: none;
+  outline: none;
+}
+
+.sign .formContainer .links a p:hover {
+  font-size: 31px;
+  transition: 0.5s;
+  color: blue;
   border: none;
   outline: none;
 }
