--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -362,6 +362,7 @@ input::placeholder {
   height: 100vh;
   background-color: white;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -383,6 +384,32 @@ input::placeholder {
   align-items: center;
   border-radius: 30px;
   box-shadow: 8px 8px 22px 10px rgb(14, 2, 2);
+}
+
+.sign .formContainer .headerContainer{
+    height: 50px;
+    width: 90%;
+    display: flex;
+    text-align: left;
+    align-items: left;
+    border-bottom: 2px solid;
+    background-color: white;
+    background-color: transparent;
+    text-decoration: none;
+    border: none;
+    transition: 1s;
+    cursor: pointer;
+}
+
+.sign .formContainer .headerContainer img{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+}
+
+.sign .formContainer .headerContainer img:hover{
+    width: 42px;
+    height: 42px;
 }
 
 .sign .formContainer form {
