--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -434,18 +434,20 @@ input::placeholder {
   font-size: 30px;
 }
 
-.sign form input[type="submit"] {
+.sign .submitButton {
   border: 2px solid black;
   cursor: pointer;
-  width: 200px;
+  width: 300px;
   height: 50px;
   border-radius: 5px;
+  font-size: 30px;
+  background: transparent;
 }
 
-.sign form input[type="submit"]:hover {
+.sign .submitButton:hover {
   background-color: black;
   color: white;
-  width: 250px;
+  width: 350px;
   transition: 0.5s;
 }
 
