--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -14,7 +14,7 @@ body {
 
 .header {
   padding: 10px 20px;
-  height: 80px;
+  height: 10%;
   display: flex;
   text-align: center;
   justify-content: space-between;
@@ -108,7 +108,7 @@ body {
 
 .crud {
   width: 100%;
-  height: 90px;;
+  height: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -121,7 +121,7 @@ body {
   border-left: none;
   border-right: none;
   border-bottom: 2px solid black;
-  width: 800px;
+  width: 30%;
   background-color: transparent;
   color: black;
   outline: none;
@@ -167,7 +167,7 @@ input::placeholder {
 
 .quotes {
   width: 100%;
-  height: 100px;
+  height: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -184,7 +184,7 @@ input::placeholder {
 }
 
 .quote h1 {
-  font-size: 25px;
+  font-size: 2rem;
   font-weight: 400;
 }
 
@@ -195,7 +195,7 @@ input::placeholder {
 
 .toDoWrapper {
   position: relative;
-  height: 500px;
+  height: 60%;
   display: flex;
   align-items: center;
   flex-wrap: nowrap; /* Allow items to wrap onto multiple lines */
@@ -284,7 +284,7 @@ input::placeholder {
 
 .footer {
   width: 100%;
-  height: 100%;
+  height: 10%;
   padding: 10px 0px;
   display: flex;
   align-items: center;
@@ -484,10 +484,11 @@ input::placeholder {
 
   *{
     max-width: 100%;
+    max-height: 100vh;
   }
 
   .header {
-    height: 5rem;
+    height: 10vh;
     padding: 10px 0px;
 }
 
@@ -507,7 +508,7 @@ input::placeholder {
 }
 
 .quote h1 {
-  font-size: 17px;
+  font-size: 0.8rem;
 }
 
 .header .logo img {
@@ -522,12 +523,12 @@ input::placeholder {
 }
 
 .crud input[type="text"] {
-  width: 160px;
   height: 40px;
+  width: 45%;
 }
 
 #myPlaceholder::placeholder{
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .crud button {
@@ -541,15 +542,19 @@ input::placeholder {
   font-size: 18px;
 }
 
+.footer{
+  height: 10vh;
+}
+
 .footerWrapper img {
   width: 50px;
   height: 50px;
 }
 
 .toDoColor {
-  min-width: 130px;
-  max-width: 130px;
-  height: 200px;
+  min-width: 37%;
+  max-width: 37%;
+  height: 80%;
   border-radius: 10px;
 }
 
@@ -558,9 +563,8 @@ input::placeholder {
 }
 
 .toDoWrapper {
-
-  height: 100%;
   padding: 15px 10px;
+  height: 45vh;
   gap: 10px;
 
 }
@@ -581,6 +585,7 @@ input::placeholder {
 
 .quotes{
   min-width: 100%;
+  height: 10vh;
   padding: 10px 0px;
 }
 
@@ -625,7 +630,6 @@ input::placeholder {
 
 .crud button:hover {
   width: 75px;
-  height: 40px;
   font-size: 13px;
 
 }
@@ -636,7 +640,7 @@ input::placeholder {
 
 .crud {
 
-  height: 80px;
+  height: 10vh;
 
 }
 
