--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -14,7 +14,7 @@ body {
 
 .header {
   padding: 10px 20px;
-  height: 10%;
+  height: 10vh;
   display: flex;
   text-align: center;
   justify-content: space-between;
@@ -108,7 +108,7 @@ body {
 
 .crud {
   width: 100%;
-  height: 10%;
+  height: 8vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,7 +167,7 @@ input::placeholder {
 
 .quotes {
   width: 100%;
-  height: 10%;
+  height: 12.5vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -195,7 +195,7 @@ input::placeholder {
 
 .toDoWrapper {
   position: relative;
-  height: 60%;
+  height: 50vh;
   display: flex;
   align-items: center;
   flex-wrap: nowrap; /* Allow items to wrap onto multiple lines */
@@ -208,7 +208,7 @@ input::placeholder {
 .toDoColor {
   min-width: 300px;
   max-width: 300px;
-  height: 460px;
+  height: 93%;
   border-radius: 30px;
   display: flex;
   align-items: center;
@@ -284,7 +284,7 @@ input::placeholder {
 
 .footer {
   width: 100%;
-  height: 10%;
+  height: 10vh;
   padding: 10px 0px;
   display: flex;
   align-items: center;
@@ -302,8 +302,9 @@ input::placeholder {
 }
 
 .footerWrapper img {
-  width: 90px;
-  height: 90px;
+  position: relative;
+  width: 75px;
+  height: 75px;
   cursor: pointer;
 }
 
@@ -375,8 +376,8 @@ input::placeholder {
 .sign .formContainer {
   background-color: yellow;
   opacity: 0.91;
-  width: 30%;
-  height: 70%;
+  width: 40%;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -452,7 +453,7 @@ input::placeholder {
 }
 
 .sign .formContainer .links a p {
-  font-size: 25px;
+  font-size: 1.5em;
   color: black;
   border: none;
   outline: none;
@@ -649,8 +650,8 @@ input::placeholder {
 }
 
 .sign .formContainer {
-  width: 320px;
-  height: 500px;
+  width: 90%;
+  height: 85vh;
   border-radius: 15px;
 }
 
@@ -659,7 +660,7 @@ input::placeholder {
 }
 
 .sign .formContainer .links a p {
-  font-size: 20px;
+  font-size: 1.5em;
 }
 
 #mySecondPlaceholder::placeholder{
