--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -285,7 +285,7 @@ input::placeholder {
 .footer {
   width: 100%;
   height: 10vh;
-  padding: 10px 0px;
+  padding: 20px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -402,8 +402,8 @@ input::placeholder {
 }
 
 .sign .formContainer .headerContainer img{
-    width: 45px;
-    height: 45px;
+    width: 4rem;
+    height: 4rem;
     background-color: transparent;
     transition: 0.5s;
 }
@@ -426,13 +426,13 @@ input::placeholder {
 .sign .formContainer form input {
   background-color: transparent;
   width: 70%;
-  height: 40px;
+  height: 10%;
   outline: none;
   border-top: none;
   border-left: none;
   border-right: none;
   border-bottom: 2px solid black;
-  font-size: 30px;
+  font-size: 1rem;
 }
 
 .sign .submitButton {
@@ -453,7 +453,8 @@ input::placeholder {
 }
 
 .sign .formContainer .links a p {
-  font-size: 1.5em;
+  font-size: 1.7em;
+  height: 10px;
   color: black;
   border: none;
   outline: none;
@@ -461,6 +462,7 @@ input::placeholder {
 
 .sign .formContainer .links a p:hover {
   transition: 0.5s;
+  font-size: 1.8em;
   color: blue;
 }
 
