--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -180,7 +180,9 @@ input::placeholder {
   align-items: center;
   flex-direction: column;
   text-align: center;
-  gap: 10px;
+  gap: 5px;
+  padding: 1% 3%;
+
 }
 
 .quote h1 {
@@ -233,6 +235,11 @@ input::placeholder {
   height: 40px;
 }
 
+.toDoColor .toDoBtn .specialButton img{
+  width: 60px;
+  height: 60px;
+}
+
 .toDoColor .toDoBtnEdit button img:hover {
   width: 45px;
   height: 45px;
@@ -248,6 +255,18 @@ input::placeholder {
   overflow: hidden;
 }
 
+
+.toDoDone h1 {
+  text-decoration: line-through;
+  opacity: 0.6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 550px;
+  overflow: hidden;
+}
+
 .toDoColor .toDoText h1 {
   padding: 0px 10px;
   font-weight: 550;
@@ -255,7 +274,7 @@ input::placeholder {
 }
 
 .toDoColor .toDoBtn {
-  width: 100%;
+  width: 80%;
   height: 60px;
   display: flex;
   gap: 10px;
@@ -267,7 +286,7 @@ input::placeholder {
   border: none;
   outline: none;
   width: 100px;
-  height: 10px;
+  height: 15px;
   border-radius: 10px;
   cursor: pointer;
   background-color: transparent;
@@ -543,7 +562,7 @@ input::placeholder {
   cursor: pointer;
 }
 
-.addHabit input[type = "text"]{
+.addHabit input[type="text"]{
   width: 90%;
   height: 30px;
   border-top: 0;
@@ -633,7 +652,8 @@ input::placeholder {
 }
 
 .habit .counter p{
-  font-size: 1.7rem;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .habit .buttons{
@@ -653,6 +673,52 @@ input::placeholder {
   border: none;
   cursor: pointer;
   right: 1px;
+}
+
+.editHabit{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.editHabitBox01{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.editHabitBox02{
+  display: flex;
+  height: 100%;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+}
+
+.editHabit input[type = "text"]{
+  width: 90%;
+  background-color: transparent;
+  border-top: none;
+  border-left: none;
+  height: 50%;
+  border-right: none;
+  outline: none;
+  border-bottom: 2px black solid;
+  font-size: 1.6rem;
+}
+
+.editHabit select{
+  background-color: transparent;
+  height: 40%;
+  border-radius: 0.4rem;
+  width: 100%;
+  text-align: center;
+  font-size: 1.3rem;
+  border: 2px black solid;
+
 }
 
 .counter input{
@@ -804,6 +870,13 @@ input::placeholder {
   border-radius: 10px;
 }
 
+.toDoColor:hover {
+  min-width: 42%;
+  max-width: 42%;
+  height: 80%;
+  border-radius: 10px;
+}
+
 .footer h1 {
   font-size: 20px;
 }
@@ -934,7 +1007,7 @@ input::placeholder {
 .header .head01 h1 {
   width: 80px;
   text-align: center;
-  font-size: 13px;
+  font-size: 1.2rem;
   padding: 0px 5px;
   font-weight: 100;
 }
@@ -1001,7 +1074,7 @@ input::placeholder {
 
 .addHabit{
   width: 100%;
-  height: 11vh;
+  height: 10vh;
   gap: 0.3rem;
 }
 
@@ -1016,7 +1089,8 @@ input::placeholder {
 .addHabit input[type = "text"]{
   position: relative;
   width: 50vw;
-  height: 20px;
+  height: 2vh;
+  font-size: 1.2rem;
 }
 
 
@@ -1034,12 +1108,112 @@ input::placeholder {
 }
 
 .habit{
-  width: 70%;
+  width: 90%;
   font-size: 1.2rem;
+  justify-content: center;
+  gap: 25px;
 }
+
 .habit:hover{
-  width: 85%;
+  width: 95%;
   font-size: 1.3rem;
+}
+
+
+.habit .title{
+  font-size: 1rem;
+  width: 70%;
+}
+
+
+.habit .counter p{
+  font-size: 0.55rem;
+}
+
+
+.habit .buttons {
+  display: flex;
+  gap: 0.5rem;
+  width: 25%;
+  justify-content: center;
+  padding: 0;
+  align-items: center;
+  height: 100%;
+  flex-direction: column;
+}
+
+.habit img {
+    width: 4vh;
+    height: 3vh;
+}
+
+
+.habit img:hover {
+    width: 4.5vh;
+    height: 3.5vh;
+}
+
+
+.habit .counter{
+  width: 25%;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  flex-direction: column;
+}
+
+.counter input{
+  width: 60%;
+  height: 15%;
+  font-size: 0.7rem;
+}
+
+.editHabit{
+  gap: 2px;
+  flex-direction: column;
+}
+
+
+.editHabit input[type="text"]::placeholder {
+  font-size: 0.8rem; /* change to whatever size you want */
+}
+
+
+.editHabit input[type="text"] {
+  font-size: 1rem; /* change to whatever size you want */
+  width: 100%;
+}
+
+
+
+.addHabit input[type="text"]::placeholder {
+  font-size: 1rem; /* change to whatever size you want */
+}
+
+.editHabit select {
+    background-color: transparent;
+    height: 80%;
+    border-radius: 0.4rem;
+    width: 80%;
+    text-align: center;
+    align-items: center;
+    font-size: 0.6rem;
+    border: 2px black solid;
+}
+
+.editHabitBox01{
+  height: 5rem;
+}
+
+.editHabitBox02{
+  width: 100%;
+}
+
+.toDoColor .toDoBtn .specialButton img{
+  width: 2rem;
+  height: 2rem;
 }
 
 }
