--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -866,7 +866,7 @@ input::placeholder {
 .toDoColor {
   min-width: 37%;
   max-width: 37%;
-  height: 78%;
+  height: 80%;
   border-radius: 10px;
 }
 
@@ -883,7 +883,7 @@ input::placeholder {
 
 .toDoWrapper {
   padding: 1px 10px;
-  height: 38vh;
+  height: 41.7vh;
   gap: 10px;
 
 }
@@ -899,12 +899,13 @@ input::placeholder {
 }
 
 .quote {
+  gap: 0.7rem;
   padding: 0px 5px;
 }
 
 .quotes{
   min-width: 100%;
-  height: 14vh;
+  height: 17vh;
   padding: 5px 0px;
 }
 
@@ -960,7 +961,7 @@ input::placeholder {
 
 .crud {
 
-  height: 14vh;
+  height: 12vh;
 
 }
 
@@ -1126,20 +1127,21 @@ input::placeholder {
 
 
 .habit .title{
-  font-size: 1rem;
+  font-size: 1.3rem;
   width: 70%;
+  font-weight: bold;
 }
 
 
 .habit .counter p{
-  font-size: 0.55rem;
+  font-size: 0.68rem;
 }
 
 
 .habit .buttons {
   display: flex;
-  gap: 0.5rem;
-  width: 25%;
+  gap: 0.3rem;
+  width: 30%;
   justify-content: center;
   padding: 0;
   align-items: center;
@@ -1148,19 +1150,19 @@ input::placeholder {
 }
 
 .habit img {
-    width: 4vh;
-    height: 3vh;
+    width: 5vh;
+    height: 4vh;
 }
 
 
 .habit img:hover {
-    width: 4.5vh;
-    height: 3.5vh;
+    width: 5.5vh;
+    height: 4.5vh;
 }
 
 
 .habit .counter{
-  width: 25%;
+  width: 30%;
   display: flex;
   gap: 10px;
   align-items: center;
